# tg-form-filler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  form_config.example.json  form_filler.py  llm_handler.py  main.py  pyproject.toml  requirements.txt
deploy/: deploy.sh  docker-compose.yml  init-server.sh
form_configs/: food_diary_form_config.example.json  spending_diary_form_config.example.json
rules/: nutrition_rules.md
src/tg_form_filler/: __main__.py  bot.py  form_filler.py  llm_handler.py  sheets_editor.py  sheets_reader.py  stats.py
